import org.gradle.internal.os.OperatingSystem

plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
}

kotlin {
    jvmToolchain(25)
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

switch (OperatingSystem.current()) {
    case OperatingSystem.LINUX:
        project.ext.lwjglNatives = "natives-linux"
        def osArch = System.getProperty("os.arch")
        if (osArch.startsWith("arm") || osArch.startsWith("aarch64")) {
            project.ext.lwjglNatives += osArch.contains("64") || osArch.startsWith("armv8") ? "-arm64" : "-arm32"
        } else if  (osArch.startsWith("ppc")) {
            project.ext.lwjglNatives += "-ppc64le"
        } else if  (osArch.startsWith("riscv")) {
            project.ext.lwjglNatives += "-riscv64"
        }
        break
    case OperatingSystem.MAC_OS:
        project.ext.lwjglNatives = System.getProperty("os.arch").startsWith("aarch64") ? "natives-macos-arm64" : "natives-macos"
        break
    case OperatingSystem.WINDOWS:
        def osArch = System.getProperty("os.arch")
        project.ext.lwjglNatives = osArch.contains("64")
                ? "natives-windows${osArch.startsWith("aarch64") ? "-arm64" : ""}"
                : "natives-windows-x86"
        break
}

dependencies {
    implementation 'net.dv8tion:JDA:6.0.0-rc.2'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.json:json:20240303'
    implementation 'org.jetbrains:annotations:26.0.1'
    implementation 'org.jcodec:jcodec:0.2.5'
    implementation 'com.google.api-client:google-api-client:2.7.0'
    implementation 'commons-io:commons-io:2.17.0'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.3'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-text:1.11.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.21.2'
    testImplementation "junit:junit:4.13.2"
    implementation "io.github.kotlin-graphics:glm:0.9.9.1-12"

    implementation platform("org.lwjgl:lwjgl-bom:3.4.1")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-assimp"
    implementation "org.lwjgl:lwjgl-bgfx"
    implementation "org.lwjgl:lwjgl-egl"
    implementation "org.lwjgl:lwjgl-fmod"
    implementation "org.lwjgl:lwjgl-freetype"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-harfbuzz"
    implementation "org.lwjgl:lwjgl-hwloc"
    implementation "org.lwjgl:lwjgl-jawt"
    implementation "org.lwjgl:lwjgl-jemalloc"
    implementation "org.lwjgl:lwjgl-ktx"
    implementation "org.lwjgl:lwjgl-llvm"
    implementation "org.lwjgl:lwjgl-lmdb"
    implementation "org.lwjgl:lwjgl-lz4"
    implementation "org.lwjgl:lwjgl-meshoptimizer"
    implementation "org.lwjgl:lwjgl-msdfgen"
    implementation "org.lwjgl:lwjgl-nanovg"
    implementation "org.lwjgl:lwjgl-nfd"
    implementation "org.lwjgl:lwjgl-nuklear"
    implementation "org.lwjgl:lwjgl-odbc"
    implementation "org.lwjgl:lwjgl-openal"
    implementation "org.lwjgl:lwjgl-opencl"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-opengles"
    implementation "org.lwjgl:lwjgl-openxr"
    implementation "org.lwjgl:lwjgl-opus"
    implementation "org.lwjgl:lwjgl-par"
    implementation "org.lwjgl:lwjgl-remotery"
    implementation "org.lwjgl:lwjgl-renderdoc"
    implementation "org.lwjgl:lwjgl-rpmalloc"
    implementation "org.lwjgl:lwjgl-sdl"
    implementation "org.lwjgl:lwjgl-shaderc"
    implementation "org.lwjgl:lwjgl-spng"
    implementation "org.lwjgl:lwjgl-spvc"
    implementation "org.lwjgl:lwjgl-stb"
    implementation "org.lwjgl:lwjgl-tinyexr"
    implementation "org.lwjgl:lwjgl-tinyfd"
    implementation "org.lwjgl:lwjgl-vma"
    implementation "org.lwjgl:lwjgl-vulkan"
    implementation "org.lwjgl:lwjgl-xxhash"
    implementation "org.lwjgl:lwjgl-yoga"
    implementation "org.lwjgl:lwjgl-zstd"
    implementation "org.lwjgl:lwjgl::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-assimp::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-bgfx::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-freetype::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-harfbuzz::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-hwloc::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-jemalloc::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-ktx::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-llvm::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-lmdb::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-lz4::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-meshoptimizer::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-msdfgen::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-nfd::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-openal::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-opengles::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-openxr::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-opus::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-par::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-remotery::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-rpmalloc::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-sdl::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-spng::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-spvc::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-tinyfd::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-vma::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-xxhash::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-yoga::$lwjglNatives"
    implementation "org.lwjgl:lwjgl-zstd::$lwjglNatives"

    implementation 'org.apache.logging.log4j:log4j-core:3.0.0-beta2'
    implementation 'ch.qos.logback:logback-classic:1.5.25'

    implementation 'com.dropbox.core:dropbox-core-sdk:7.0.0'
    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}